--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "c411724d-dae7-4dac-a280-35fc5fbc2eed",
    "metadata": {},
    "outputs": [
@@ -1434,28 +1434,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1880</th>\n",
-       "      <th>Buck</th>\n",
-       "      <td>5</td>\n",
+       "      <th>John</th>\n",
+       "      <td>9701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1881</th>\n",
-       "      <th>Buster</th>\n",
-       "      <td>5</td>\n",
+       "      <th>John</th>\n",
+       "      <td>8795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1882</th>\n",
-       "      <th>Iris</th>\n",
-       "      <td>5</td>\n",
+       "      <th>John</th>\n",
+       "      <td>9597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1883</th>\n",
-       "      <th>Bryant</th>\n",
-       "      <td>5</td>\n",
+       "      <th>John</th>\n",
+       "      <td>8934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1884</th>\n",
-       "      <th>Alden</th>\n",
-       "      <td>6</td>\n",
+       "      <th>John</th>\n",
+       "      <td>9428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1464,28 +1464,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010</th>\n",
-       "      <th>Blanche</th>\n",
-       "      <td>6</td>\n",
+       "      <th>Isabella</th>\n",
+       "      <td>22913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2011</th>\n",
-       "      <th>Gustave</th>\n",
-       "      <td>6</td>\n",
+       "      <th>Sophia</th>\n",
+       "      <td>21839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2012</th>\n",
-       "      <th>Lovie</th>\n",
-       "      <td>5</td>\n",
+       "      <th>Sophia</th>\n",
+       "      <td>22285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013</th>\n",
-       "      <th>Elizebeth</th>\n",
-       "      <td>5</td>\n",
+       "      <th>Sophia</th>\n",
+       "      <td>21172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014</th>\n",
-       "      <th>Dessie</th>\n",
-       "      <td>5</td>\n",
+       "      <th>Emma</th>\n",
+       "      <td>20811</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1493,24 +1493,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                Count\n",
-       "Year Name            \n",
-       "1880 Buck           5\n",
-       "1881 Buster         5\n",
-       "1882 Iris           5\n",
-       "1883 Bryant         5\n",
-       "1884 Alden          6\n",
-       "...               ...\n",
-       "2010 Blanche        6\n",
-       "2011 Gustave        6\n",
-       "2012 Lovie          5\n",
-       "2013 Elizebeth      5\n",
-       "2014 Dessie         5\n",
+       "               Count\n",
+       "Year Name           \n",
+       "1880 John       9701\n",
+       "1881 John       8795\n",
+       "1882 John       9597\n",
+       "1883 John       8934\n",
+       "1884 John       9428\n",
+       "...              ...\n",
+       "2010 Isabella  22913\n",
+       "2011 Sophia    21839\n",
+       "2012 Sophia    22285\n",
+       "2013 Sophia    21172\n",
+       "2014 Emma      20811\n",
        "\n",
        "[135 rows x 1 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
